--- a/Front End/blog-post-app/src/Top/Top.css
+++ b/Front End/blog-post-app/src/Top/Top.css
@@ -1,11 +1,54 @@
+*{
+    margin: 0;
+}
 .top{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top:0px;
+    background-color: rgba(128, 128, 128, 0.521);
+}
+.socialIcons{
+    padding: 1rem;
+    font-size: 20px;
+}
+.socialIcons:hover{
+    cursor: pointer;
 }
 .item1,.item3{
     flex:3;
-    background-color: blueviolet;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .item2{
     flex:6;
-    background-color: aqua;
+    padding:1rem;
+    font-size: large;
+}
+.item2 ul{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+} 
+.item2 li:hover{
+    cursor: pointer;
+}
+.item3{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.item3 img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.item3 input{
+    padding: 8px; 
+}
+.searchIcon:hover{
+    cursor: pointer;
 }
