Added sidebar components

--- a/Front End/blog-post-app/src/Header/header.css
+++ b/Front End/blog-post-app/src/Header/header.css
@@ -1,4 +1,11 @@
 .headerTitles{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     font-size: larger;
+}
+.headerTitles .headerImage{
+    width: 100%;
+    height: 600px;
 }
