more components added(nested)

--- a/Front End/blog-post-app/src/Pages/Home/home.css
+++ b/Front End/blog-post-app/src/Pages/Home/home.css
@@ -3,9 +3,9 @@
 }
 .posts{
     flex:9;
-    height: 300 px;
-    width: 300px;
-    background-color: aqua;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 .sidebar{
     flex:3
