--- a/Front End/blog-post-app/src/components/Header/header.css
+++ b/Front End/blog-post-app/src/components/Header/header.css
@@ -7,8 +7,8 @@
 }
 .headerTitles .headerImage{
     width: 100%;
-    height: 600px;
+    height: 400px;
     object-fit: fill;
-    overflow: hidden;
+    border-bottom: 3px dotted grey;
 
 }
