--- a/Front End/blog-post-app/src/components/Sidebar/sidebar.css
+++ b/Front End/blog-post-app/src/components/Sidebar/sidebar.css
@@ -1,6 +1,7 @@
 
 .sidebar{
     flex: 3;
+    background-color: rgba(128, 128, 128, 0.171);
 }
 .sidebarItem{
     display: flex;
@@ -33,9 +34,9 @@
 }
 
 .sidebarItem > img{
-    width:80%;
+    width:100%;
     height: 200px;
-    object-fit: contain;
+    object-fit: fill;
 }
 .sidebarItem > p{
     text-align: center;
