--- a/Front End/blog-post-app/src/components/Post/post.css
+++ b/Front End/blog-post-app/src/components/Post/post.css
@@ -1,5 +1,5 @@
 .post{
-    width: 30%;
+    width: 32%;
     margin: 5px;
     border-bottom: 1px solid gray;
     background-color: rgba(231, 238, 238, 0.664);
@@ -32,9 +32,9 @@
 }
 
 .post img{
-    width:90%;
-    height: 300px;
+    width:100%;
+    height: 250px;
     object-fit: fill;
-    border-radius:.5rem!important;
-    margin: 15px 20px 20px 15px;
+    border-radius:5px;
+    margin-top: 1px;
 }
